2018-08-19  Werner Lemberg  <wl@gnu.org>

	[ftdump] Fix clang compiler warnings.

	* src/ftdump.c (Print_Bytecode): Use cast instead of printf length
	modifier – we would need `hh', which only glibc offers.
	(Print_Programs): Use proper casts for constant strings and 16bit
	integer types.

2018-08-19  Werner Lemberg  <wl@gnu.org>

	[ftgamma] Fix compiler warnings.

	* src/ftgamma.c (bit1, bit2, bit): Make them static.

2016-08-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftdump] Hexdump composite glyf instructions too.

	* src/ftdump.c (Print_Programs): Updated.
	(Print_Bytecode): Cleaned up.

2016-08-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftdump] Implement hexdump of TrueType instructions.

	This is useful when searching for interesting instructions. Pushed
	values come with underscore prefix to distinguish them from actual
	opcodes.

	* src/ftdump.c (Print_Bytecode, Print_Programs): Implement this.
	(usage): New option `-p' described.
	(main): Updated.
	* src/ftdump.1: Updated.

2016-08-06  Werner Lemberg  <wl@gnu.org>

	Move Mark Leisher's `getopt' implementation to a separate file.

	We need this since `ftbench.c' now includes `unistd.h', which in
	turn declares `getopt'.

	* src/common.c, src/common.h: Move `getopt' stuff to...
	* src/mlgetopt.c, src/mlgetopt.h: ... these new files.
	Update all callers.

	* src/common.c, src/common.h: Use standard C only.
	Replace `CONST' with `const'.

	* Makefile (COMMON_OBJ): Add `mlgetopt'.

2016-08-02  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftbench.c (get_time, benchmark): Clean up timers.

2016-08-01  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftbench] Use POSIX timers when available.

	* src/ftbench.c (get_time): Use `clock_gettime' instead of obsolete
	and less accurate `gettimeofday'.
	(benchmark): Updated. 

2016-07-14  Werner Lemberg  <wl@gnu.org>

	[ftgrid] New option `-d' to give start-up design coordinates.

	This code is similar to the one from `ftmulti'.
